{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 57,
  "lineage": "7252513b-7f4f-9e75-5b1c-90dd49e57424",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407191110649:security-group/sg-0a9499f2bcade502a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a9499f2bcade502a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management2022022711165322580000000c",
            "name_prefix": "all_worker_management",
            "owner_id": "407191110649",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a9fe637cd7fc371f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407191110649:security-group/sg-0a5981d7d8331797a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a5981d7d8331797a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one2022022711165485790000000d",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "407191110649",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a9fe637cd7fc371f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407191110649:security-group/sg-0e15ccd286a86ef1e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0e15ccd286a86ef1e",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two2022022711165322540000000a",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "407191110649",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a9fe637cd7fc371f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407191110649:security-group/sg-0b57a458836a1bc2a",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-0b57a458836a1bc2a",
            "ingress": [],
            "name": "assignment-eks-7DEB0eEg20220227111653223400000009",
            "name_prefix": "assignment-eks-7DEB0eEg",
            "owner_id": "407191110649",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "assignment-eks-7DEB0eEg-eks_cluster_sg"
            },
            "tags_all": {
              "Name": "assignment-eks-7DEB0eEg-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9fe637cd7fc371f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407191110649:security-group/sg-058b5d13bdc33a66c",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-058b5d13bdc33a66c",
            "ingress": [],
            "name": "assignment-eks-7DEB0eEg2022022711165322580000000b",
            "name_prefix": "assignment-eks-7DEB0eEg",
            "owner_id": "407191110649",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "assignment-eks-7DEB0eEg-eks_worker_sg",
              "kubernetes.io/cluster/assignment-eks-7DEB0eEg": "owned"
            },
            "tags_all": {
              "Name": "assignment-eks-7DEB0eEg-eks_worker_sg",
              "kubernetes.io/cluster/assignment-eks-7DEB0eEg": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9fe637cd7fc371f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-2496458597",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b57a458836a1bc2a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-307303836",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b57a458836a1bc2a",
            "self": false,
            "source_security_group_id": "sg-058b5d13bdc33a66c",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-1500262877",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-058b5d13bdc33a66c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-3891050347",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-058b5d13bdc33a66c",
            "self": false,
            "source_security_group_id": "sg-0b57a458836a1bc2a",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-3467332737",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-058b5d13bdc33a66c",
            "self": false,
            "source_security_group_id": "sg-0b57a458836a1bc2a",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-2122365345",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-058b5d13bdc33a66c",
            "self": false,
            "source_security_group_id": "sg-058b5d13bdc33a66c",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae357b1dc59a1e26",
            "domain": "vpc",
            "id": "eipalloc-0ae357b1dc59a1e26",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-199-62-188.compute-1.amazonaws.com",
            "public_ip": "44.199.62.188",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "assignment-vpc-us-east-1a",
              "kubernetes.io/cluster/assignment-eks-7DEB0eEg": "shared"
            },
            "tags_all": {
              "Name": "assignment-vpc-us-east-1a",
              "kubernetes.io/cluster/assignment-eks-7DEB0eEg": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407191110649:internet-gateway/igw-0d6d9b09de20972ee",
            "id": "igw-0d6d9b09de20972ee",
            "owner_id": "407191110649",
            "tags": {
              "Name": "assignment-vpc",
              "kubernetes.io/cluster/assignment-eks-7DEB0eEg": "shared"
            },
            "tags_all": {
              "Name": "assignment-vpc",
              "kubernetes.io/cluster/assignment-eks-7DEB0eEg": "shared"
            },
            "vpc_id": "vpc-0a9fe637cd7fc371f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae357b1dc59a1e26",
            "connectivity_type": "public",
            "id": "nat-091efcd217ee075e7",
            "network_interface_id": "eni-068db1518cf004f82",
            "private_ip": "10.0.4.26",
            "public_ip": "44.199.62.188",
            "subnet_id": "subnet-051280fe5d11d3b46",
            "tags": {
              "Name": "assignment-vpc-us-east-1a",
              "kubernetes.io/cluster/assignment-eks-7DEB0eEg": "shared"
            },
            "tags_all": {
              "Name": "assignment-vpc-us-east-1a",
              "kubernetes.io/cluster/assignment-eks-7DEB0eEg": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d5fede7eb91602901080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-091efcd217ee075e7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d5fede7eb9160290",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d6d9b09de20972ee",
            "id": "r-rtb-0296bb1d1e712a4d91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0296bb1d1e712a4d9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407191110649:route-table/rtb-0d5fede7eb9160290",
            "id": "rtb-0d5fede7eb9160290",
            "owner_id": "407191110649",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "assignment-vpc-private",
              "kubernetes.io/cluster/assignment-eks-7DEB0eEg": "shared"
            },
            "tags_all": {
              "Name": "assignment-vpc-private",
              "kubernetes.io/cluster/assignment-eks-7DEB0eEg": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9fe637cd7fc371f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407191110649:route-table/rtb-0296bb1d1e712a4d9",
            "id": "rtb-0296bb1d1e712a4d9",
            "owner_id": "407191110649",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "assignment-vpc-public",
              "kubernetes.io/cluster/assignment-eks-7DEB0eEg": "shared"
            },
            "tags_all": {
              "Name": "assignment-vpc-public",
              "kubernetes.io/cluster/assignment-eks-7DEB0eEg": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9fe637cd7fc371f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0906dc88ecf9f21a1",
            "route_table_id": "rtb-0d5fede7eb9160290",
            "subnet_id": "subnet-03bc22fc192cc7f9a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05cca9d5b5762e794",
            "route_table_id": "rtb-0d5fede7eb9160290",
            "subnet_id": "subnet-0475847e620f90c72"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f141f07dd317acef",
            "route_table_id": "rtb-0d5fede7eb9160290",
            "subnet_id": "subnet-0a2fa68cf3ea1937d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065600b6259032708",
            "route_table_id": "rtb-0296bb1d1e712a4d9",
            "subnet_id": "subnet-051280fe5d11d3b46"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076be6955d3158e1b",
            "route_table_id": "rtb-0296bb1d1e712a4d9",
            "subnet_id": "subnet-0f751d166b3817075"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054b0ab764747dcf3",
            "route_table_id": "rtb-0296bb1d1e712a4d9",
            "subnet_id": "subnet-092edc8960922c65f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407191110649:subnet/subnet-03bc22fc192cc7f9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03bc22fc192cc7f9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "407191110649",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "assignment-vpc-private-us-east-1a",
              "kubernetes.io/cluster/assignment-eks-7DEB0eEg": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "assignment-vpc-private-us-east-1a",
              "kubernetes.io/cluster/assignment-eks-7DEB0eEg": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a9fe637cd7fc371f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407191110649:subnet/subnet-0475847e620f90c72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0475847e620f90c72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "407191110649",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "assignment-vpc-private-us-east-1b",
              "kubernetes.io/cluster/assignment-eks-7DEB0eEg": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "assignment-vpc-private-us-east-1b",
              "kubernetes.io/cluster/assignment-eks-7DEB0eEg": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a9fe637cd7fc371f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407191110649:subnet/subnet-0a2fa68cf3ea1937d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2fa68cf3ea1937d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "407191110649",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "assignment-vpc-private-us-east-1c",
              "kubernetes.io/cluster/assignment-eks-7DEB0eEg": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "assignment-vpc-private-us-east-1c",
              "kubernetes.io/cluster/assignment-eks-7DEB0eEg": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a9fe637cd7fc371f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407191110649:subnet/subnet-051280fe5d11d3b46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051280fe5d11d3b46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "407191110649",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "assignment-vpc-public-us-east-1a",
              "kubernetes.io/cluster/assignment-eks-7DEB0eEg": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "assignment-vpc-public-us-east-1a",
              "kubernetes.io/cluster/assignment-eks-7DEB0eEg": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a9fe637cd7fc371f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407191110649:subnet/subnet-0f751d166b3817075",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f751d166b3817075",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "407191110649",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "assignment-vpc-public-us-east-1b",
              "kubernetes.io/cluster/assignment-eks-7DEB0eEg": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "assignment-vpc-public-us-east-1b",
              "kubernetes.io/cluster/assignment-eks-7DEB0eEg": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a9fe637cd7fc371f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407191110649:subnet/subnet-092edc8960922c65f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092edc8960922c65f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "407191110649",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "assignment-vpc-public-us-east-1c",
              "kubernetes.io/cluster/assignment-eks-7DEB0eEg": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "assignment-vpc-public-us-east-1c",
              "kubernetes.io/cluster/assignment-eks-7DEB0eEg": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a9fe637cd7fc371f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407191110649:vpc/vpc-0a9fe637cd7fc371f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d02ebaf407d47f5e",
            "default_route_table_id": "rtb-0e8ea12111149b95a",
            "default_security_group_id": "sg-07a34beb204ff221b",
            "dhcp_options_id": "dopt-080e4b73",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a9fe637cd7fc371f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e8ea12111149b95a",
            "owner_id": "407191110649",
            "tags": {
              "Name": "assignment-vpc",
              "kubernetes.io/cluster/assignment-eks-7DEB0eEg": "shared"
            },
            "tags_all": {
              "Name": "assignment-vpc",
              "kubernetes.io/cluster/assignment-eks-7DEB0eEg": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}